@@ -4,8 +4,6 @@ define('TYPO3_MOD_PATH', '../typo3conf/ext/sr_freecap/mod1/');
 $BACK_PATH='../../../../typo3/';
 $MCONF['name'] = 'tools_txsrfreecapM1';
 
-//$MCONF['script']='frameset.php';
-
 $MCONF['access'] = 'admin';
 $MCONF['script'] = 'index.php';
 
